--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0</version>
 
     <name>svg2vector</name>
-    <url>http://www.example.com</url>
+    <url>http://www.stars-one.site</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
